--- a/src/stylesheets/Projects.scss
+++ b/src/stylesheets/Projects.scss
@@ -54,7 +54,6 @@
       position: relative;
       overflow: hidden;
       transition: ease-in-out 0.6s;
-      cursor: pointer;
 
       @include forTablet {
         border: 1px solid #fcfcfc;
@@ -118,10 +117,12 @@
           height: 100%;
           visibility: hidden;
           color: white;
+
           .SingleProject {
             &__title {
               display: block;
               font-size: 24px;
+              margin: 20px 0;
             }
 
             &__subtitle {
@@ -131,6 +132,14 @@
 
             &__description {
               display: block;
+              color: $colorBody;
+            }
+
+            &__links {
+              margin: 20px 0;
+              a {
+                color: white;
+              }
             }
 
             &__tags {
@@ -193,7 +202,7 @@
         i {
           margin: 2px;
           font-size: 18px;
-          color: whitesmoke;
+          color: lightgrey;
         }
       }
     }
